# Gitter

./: .gitignore  CLAUDE.md  FileMenu.py  HelloKivy.py  HelloTextual.py  LICENSE.md  LogScreen.py  MenuApp.py  MenuBar.py  OsApp.py  ProjectView.py  README.md  ReleaseNotes.py  ReleaseNotes.tcss  TextWidget.py  ViewMenu.py  add_or_edit_project.py  add_or_edit_project.tcss  git_commit.py  git_commit.tcss  git_staging.py  git_staging.tcss  log_screen.tcss  main.py  menu_app.tcss  os_app.tcss  project_view.tcss  pyproject.toml  requirements.txt  rich_log.py  styled.py  styled.tcss  toml_helper.py
.claude/: settings.local.json
.github/workflows/: build.yml  publish-homebrew.yml  publish.yml  tests.yml
BusinessLogic/: GitManager.py  docs_helper.py  toml_helper.py
CommandLine/: CommandLineAddProject.py  CommandLineHelp.py  CommandLineInteractive.py  CommandLineIssue.py  CommandLineNotes.py  CommandLineStatus.py  CommandLineVersion.py
TUI/: FileMenu.py  MenuApp.py  ViewMenu.py  menu_app.tcss
TUI/GitFlow/: finish_feature.py  finish_feature.tcss  finish_release.py  finish_release.tcss  start_feature.py  start_feature.tcss  start_release.py  start_release.tcss
TUI/Help/: about_gitter.py  about_gitter.tcss  help_menu.py  markdown_viewer.py  markdown_viewer.tcss
TUI/Menu/: FileMenu.py  GitMenu.py  MenuBar.py  ViewMenu.py
TUI/commit/: git_commit.py  git_staging.py  git_staging.tcss
TUI/debug/: rich_log.py
TUI/documents/: help.md  issues.md  notes.md  raw.md  status.md
TUI/project/: ProjectView.py  ReleaseNotes.py
documents/: add.md  help.md  issues.md  license.md  notes.md  raw.md  status.md  tui.md  version.md
model/: GitLog.py  GitStatus.py  GitStatusFile.py  Issue.py  MainFile.py  MainFileManager.py  Project.py  Release.py
tests/: conftest.py  test_docs_helper.py  test_git_log.py  test_git_manager.py  test_git_status.py  test_project.py  test_release.py  test_toml_helper.py
