[project]
name = "gitter"
version = "0.1.9"
readme = "README.md"
description = "Git repo manager get status of multiple git repos in one place"
requires-python = ">=3.9"
dependencies = [
    "gitstatus>=1.2",
    "textual>=8.1.1",
    "textual-dev>=1.8.0",
]

[project.scripts]
gitter = "main:main"

[tool.setuptools.packages.find]
include = ["model*", "BusinessLogic*", "TUI*"]

[dependency-groups]
dev = [
    "twine>=6.2.0",
]
