[project]
name = "gitterApp"
version = "0.1.23"
readme = "README.md"
description = "Git repo manager get status of multiple git repos in one place"
requires-python = ">=3.9"
dependencies = [
    "gitstatus>=1.2",
    "textual>=8.1.1",
    "textual-dev>=1.8.0",
]

[project.scripts]
gitter = "main:main"
gitterApp = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["model*", "BusinessLogic*", "TUI*", "CommandLine*"]

[tool.setuptools.package-data]
"TUI" = ["*.tcss", "documents/*.md"]
"TUI.Menu" = ["*.tcss"]
"TUI.GitFlow" = ["*.tcss"]
"TUI.Help" = ["*.tcss"]
"TUI.project" = ["*.tcss"]
"TUI.commit" = ["*.tcss"]
"TUI.debug" = ["*.tcss"]

[dependency-groups]
dev = [
    "twine>=6.2.0",
]
